// Copyright 2020 The Measurement System Authors
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//      http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

package wfa.measurement.internal.duchy;

import "src/main/proto/wfa/measurement/internal/duchy/computation_blob_dependency.proto";
import "src/main/proto/wfa/measurement/internal/duchy/computation_details.proto";
import "src/main/proto/wfa/measurement/internal/duchy/computation_protocols.proto";

option java_package = "org.wfanet.measurement.internal.duchy";
option java_multiple_files = true;

// A token that summarizes the most commonly used data in when executing
// a stage of a computation. Tokens are used as the primary data abstraction
// between a job working on a computation and the database backend.
message ComputationToken {
  // Identifier for the computation used locally.
  int64 local_computation_id = 1;

  // Identifier for the computation used globally i.e. across the kingdom
  // and all of the duchies.
  string global_computation_id = 2;

  // The stage of the computation.
  ComputationStage computation_stage = 3;

  // The number of the current attempt of the stage.
  int32 attempt = 4;

  // Metadata about blobs used in the current stage of the computation.
  repeated ComputationStageBlobMetadata blobs = 5;

  // Identifier of the next duchy in the ring for this computation.
  // This is used to figure where to send results of a stage.
  string next_duchy = 6;

  // Identifier of the primary duchy of this computation.
  // This is used to figure where to send the initial sketch.
  string primary_duchy = 7;

  // Version of the last update to this computation. The version
  // is used to stop write contention from multiple processes.
  // This version is monotonically increasing and is checked against
  // the current value before any writes, and will change with every write.
  int64 version = 8;

  // The role the duchy is playing in the computation. Depending on the
  // role a duchy may be expected to execute different logic at different
  // steps of the computation.
  ComputationDetails.RoleInComputation role = 9;

  // Details pertinent to the specific stage of a computation. Not
  // all stages will have details.
  ComputationStageDetails stage_specific_details = 10;
}

// Metadata about a BLOb for a particular stage of the computation.
message ComputationStageBlobMetadata {
  // The way in which the stage depends upon the blob.
  ComputationBlobDependency dependency_type = 1;

  // The path to the BLOb if it exists. This is always set for an
  // input blob because all inputs must be written before a stage can begin,
  // but may not be set for an output blob.
  string path = 2;

  // The identifier of the blob.
  int64 blob_id = 3;
}